<resources>
    <string name="app_name">Tracking Fresh</string>

    <string name="LoginText">Mobile Number</string>
    <string name="ForgotMobile">Enter your Registered Mobile No.</string>
    <string name="PassText">Enter Password</string>
    <string name="FullName">Enter Full Name</string>
    <string name="Email">Enter Email</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="payment">Payment</string>
    <string name="myaccount">My Account</string>
    <string name="myOrders">Last Orders</string>
    <string name="refer_earn">Refer &amp; Earn</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="legal">Legal</string>
    <string name="Advance_Order">Advance Order</string>
    <string name="Vehicle_Route">Vehicle Route</string>

    <string name="fruits">Fruits</string>
    <string name="vegetables">Vegetables</string>
    <string name="groceries">Groceries</string>

    <string name="tomatoDesc">Tracking Fresh ensures that you get the right blend of nutrition and cost with these hybrid tomatoes. They are not like the conventional tomatoes which are restricted to seasons but these are found all year round. They have a firm and juicy texture and can perish at room temperature for longer periods.</string>
    <string name="related_Searches">leafy vegetables | root vegetable | green chili | raw garlic | white radish | watermelon fruit</string>
    <string name="disclaimer_text">The product images shown are for illustration purposes only and may not be an exact representation of the product.
    Tracking Fresh reserves the right to change product images and specifications at any time without notice.</string>

    <string name="Full_Name">Full Name</string>
    <string name="Email_id">Email ID</string>
    <string name="Mobile_no">Mobile No.</string>
    <string name="city">City</string>
    <string name="Address">Address</string>
    <string name="state">State</string>
    <string name="pin_code">Pin Code</string>
    <string name="flat_no">Flat No.</string>
    <string name="building_name">Building Name</string>
    <string name="landmark">Landmark</string>
    <string name="AddressType">Address type e.g Home, Office etc.</string>

    <string name="pickupCheckbox">Pick Up (If Pick up is checked, above address is not applicable. User will come to Vehicle and buy the product.)</string>

    <string name="loading">Loading…</string>

    <string name="facebook_app_id">216123462237612</string>

    //Register
    <string name="first_name">Enter First Name</string>
    <string name="last_name">Enter Last Name</string>
    <string name="mobileno">Enter Mobile Number</string>
    <string name="email_id">Enter Email Id</string>
    <string name="location">Enter Location</string>
    <string name="password">Enter Password</string>
    <string name="referral_code">Enter Referral Code if any</string>

    <string name="less_than_10digit">Mobile no. cannot be less than 10 digit</string>
    <string name="proper_email">Enter Proper Email ID!!</string>
    <string name="proper_mobile">Enter Proper Mobile No.</string>
    <string name="user_registered">User Registered!!!</string>
    <string name="please_register">Please Register!!!</string>

    <string name="drop_up">&#xf0d8;</string>
    <string name="drop_down">&#xf0d7;</string>

    <string name="googleMaps_ServerKey">AIzaSyDoJCSIjyCfQAO_F0NNaPXm_vPxrLhJWXM</string>


    <string name="flatno">Enter Flat no.</string>
    <string name="buildingName">Enter Building Name</string>
    <string name="Landmark">Enter Landmark</string>
    <string name="City">Enter City</string>
    <string name="State">Enter State</string>
    <string name="PinCode">EnterPin Code</string>
    <string name="addressType">Enter Address Type</string>

    <string name="vehicle_searching">Please wait while we are checking nearby vehicle.....</string>

    <string name="passwordYour">Enter Your Old Password</string>
    <string name="newPassword">Enter New Password</string>
    <string name="confirmNewPassword">Confirm New Password</string>

    <string-array name="setting">
        <item>My Addresses</item>
<!--
        <item>Cards</item>
-->
    </string-array>
    <string name="splash_text">No matter where you are \n whether your at home, or in the \n office, or the beach - we will find \n you and we will feed you</string>
    <string name="sign_in_header">SIGN IN</string>
    <string name="sign_up_header">SIGN UP</string>
    <string name="sign_in_header_two">enter your data</string>
    <string name="phone_header">Phone</string>
    <string name="password_header">Password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="new_register"><u> Sign Up</u></string>
    <string name="repeat"><u> Repeat</u></string>
    <string name="repeat_sms"><u> Resend SMS</u></string>
    <string name="repeat_call"><u> Call Me</u></string>
    <string name="SMS_verification">Enter Code</string>
    <string name="from_sms">from sms</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="menu">Menu</string>
    <string name="my_cart">My Cart</string>
    <string name="notification">Notification</string>
    <string name="invite_friends">Invite friends</string>
    <string name="invite_msg">Refer the TrackingFresh to your \n friends and family and earn money \n to enjoy fresh food.</string>

    <string name="first_name_2_char">First Name less than 2 characters!!</string>
    <string name="last_name_2_char">Last Name less than 2 characters!!</string>

    <string name="valid_name">Enter Valid Name</string>

    <string name="valid_pincode">Enter Valid Pincode</string>
    <string name="valid_state">State cannot be a number</string>
    <string name="ordering">Confirm Order</string>
    <string name="order_review">Order Review</string>
    <string name="last_order">Last Order</string>
    <string name="profile">Profile</string>
    <string name="change_pass">Change Password</string>
    <string name="offers">Offers</string>
    <string name="update_address">Update Address</string>
    <string name="tkfwallet">Wallet</string>
    <string name="payment_details">Payment Details</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="reset_password">Reset Password</string>
    <string name="logout">LogOut</string>
    <string name="tk_cash">TK Cash</string>
    <string name="total_payable_amount">Total Payable amount</string>
    <string name="new_here">New here? </string>
    <string name="track_order">TRACK ORDER</string>
    <string name="thank_you">THANK YOU</string>
    <string name="for_your_order">for your Order</string>
    <string name="order_placed">Order Placed</string>
    <string name="check_vehicle_on_map">CHECK VEHICLE ON MAP</string>
    <string name="select_payment_mode">Select Payment Mode</string>

</resources>
