<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/delivery_text"
        android:textColor="@color/white"
        android:padding="10dp"
        android:textStyle="bold"
        android:textSize="@dimen/text_size"
        android:background="@color/Button_Color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollHolder"
        android:layout_below="@+id/delivery_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/text_size"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/text_size"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/text_size"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:layout_height="wrap_content"
                    android:hint="@string/Email_id" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/referral_code"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/text_size"
                    android:inputType="textEmailAddress"
                    android:layout_height="wrap_content"
                    android:hint="@string/referral_code" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/flat_no"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/text_size"
                    android:layout_height="wrap_content"
                    android:hint="@string/flat_no" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/building_name"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/text_size"
                    android:layout_height="wrap_content"
                    android:hint="@string/building_name" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/landmark"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/text_size"
                    android:layout_height="wrap_content"
                    android:hint="@string/landmark" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/text_size"
                    android:layout_height="wrap_content"
                    android:hint="@string/city" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/state"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/text_size"
                    android:layout_height="wrap_content"
                    android:hint="@string/state" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/pincode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:inputType="number"
                    android:hint="@string/pin_code" />

            </android.support.design.widget.TextInputLayout>

            <mehdi.sakout.fancybuttons.FancyButton
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                fancy:fb_text="Submit Profile"
                android:id="@+id/confirmAddress"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                fancy:fb_defaultColor="@color/fresh_blue"
                fancy:fb_focusColor="@color/colorPrimary"
                fancy:fb_radius="5dp"
                fancy:fb_textColor="@color/white"
                fancy:fb_textSize="18sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Submit Profile"
                android:layout_margin="5dp"
                android:textSize="@dimen/text_size"
                android:visibility="gone"
                android:background="@drawable/rounded_btn"
                android:textStyle="bold"
                android:textColor="@color/TextColor"
                android:textAppearance="?android:textAppearanceMedium"
                />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</RelativeLayout>